--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         \/     \/      \/                         \/      \/
         </pre>
 
-        <pre>
+        <pre class="ascii-picture">
           .''.
           .''.      .        *''*    :_\/_:     .
          :_\/_:   _\(/_  .:.*_\/_*   : /\ :  .'.:.'.
